style.css
@font-face {
    font-family: 'Paete Round';
    src: url('./fonts/paete/PaeteRoundBold.woff2') format('woff2'),
        url('./fonts/paete/PaeteRoundBold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: 'Ghost Marker';
    src: url('./fonts/GhostMarker/GhostMarker.woff2') format('woff2'),
        url('./fonts/GhostMarker/GhostMarker.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}
:root {

}
body {
    background-image: url(./images/paper.png);
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
}
.container {
    height: 98vh;
    display: grid;
    grid-template-rows: 1fr 2fr 10fr;
}
.headerContainer {
    font-family: 'Ghost Marker', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 4rem;
}
.players {
    display: flex;
    justify-content: space-around;
    align-items: center;
    gap: 100px;
}
.player {
    font-family: 'Ghost Marker', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 4rem;   
    color: red;
}
.player-score {
    text-align: center;
}
.boardContainer {
    position: relative;
}
.boardLines {
    position: relative;
    height: 602px;
    width: 602px;
}
.line {
    position: absolute;
}
#line-0 {
    left: 100px;
}
#line-1 {

}
#line-2 {
 
}
#line-3 {

}

